Fix dark mode font, rspec, add to CHANGELOG

--- a/app/pb_kits/playbook/pb_radio/_radio.scss
+++ b/app/pb_kits/playbook/pb_radio/_radio.scss
@@ -45,6 +45,9 @@
         border-color: $error_dark;
       }
     }
+    .pb_body_kit {
+      @include pb_body_dark;
+    }
   }
   &.error {
     > .pb_radio_button {
